--- a/app/src/main/res/layout/blindbook_widget.xml
+++ b/app/src/main/res/layout/blindbook_widget.xml
@@ -1,41 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/widget_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:padding="21dp"
-    android:background="@color/colorMainBg">
+    android:background="@drawable/blindbook_widget_background">
 
-    <TextView
-        android:id="@+id/widget_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="오늘도 책을 펼쳐볼까요?"
-        android:textSize="15sp"
-        android:fontFamily="@font/pretendard_bold"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-    
-    <ImageView
-        android:layout_width="27dp"
-        android:layout_height="13dp"
-        android:background="@drawable/img_ttt_logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
 
-    
-    <ImageView
-        android:layout_width="85dp"
-        android:layout_height="69dp"
-        android:background="@drawable/img_green_blur_bg"
-        android:scaleType="centerCrop"
-        android:elevation="10dp"
-        android:layout_marginTop="-6dp"
-        android:layout_marginStart="23dp"
-        app:layout_constraintTop_toTopOf="@+id/widget_text"
-        app:layout_constraintBottom_toBottomOf="@+id/widget_text"
-        app:layout_constraintStart_toStartOf="@+id/widget_text"/>
+        <TextView
+            android:id="@+id/widget_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="오늘도 책을 펼쳐볼까요?"
+            android:textSize="15sp"
+            android:fontFamily="@font/pretendard_bold"
+            android:textColor="@color/white"/>
+
+        <ImageView
+            android:layout_width="27dp"
+            android:layout_height="13dp"
+            android:background="@drawable/img_ttt_logo"
+            android:layout_gravity="center"/>
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/widget_text"
@@ -50,4 +47,4 @@
         android:layout_marginTop="8dp"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
