--- a/app/src/main/res/layout/activity_mypage_write_review.xml
+++ b/app/src/main/res/layout/activity_mypage_write_review.xml
@@ -11,7 +11,7 @@
         android:layout_height="28dp"
         android:src="@drawable/ic_prev_arrow"
         android:scaleType="center"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="26dp"
         android:layout_marginStart="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,10 +81,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/review_book_cardview"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="71dp"
         android:backgroundTint="#212225"
         android:layout_marginTop="22dp"
+        android:layout_marginHorizontal="20dp"
         app:cardCornerRadius="5dp"
         app:layout_constraintTop_toBottomOf="@+id/date_tv"
         app:layout_constraintStart_toStartOf="parent"
@@ -186,11 +187,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/review_place_cardview"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="71dp"
         android:backgroundTint="#212225"
         android:layout_marginTop="6dp"
         app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@+id/review_book_cardview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -291,11 +293,12 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/review_cardview"
-        android:layout_width="320dp"
-        android:layout_height="290dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:backgroundTint="#212225"
         android:layout_marginTop="29dp"
-        app:cardCornerRadius="5dp"
+        android:layout_marginHorizontal="20dp"
+        app:cardCornerRadius="8dp"
         app:layout_constraintTop_toBottomOf="@+id/review_place_cardview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -313,7 +316,7 @@
 
         <TextView
             android:id="@+id/review_tv"
-            android:layout_width="288dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="한강의 『채식주의자』를 읽으며 묘한 감정에 휩싸였다. 영혜가 고기를 거부하는 순간부터 그녀의 삶은 통제에서 벗어나려는 몸부림처럼 느껴졌고, 그 과정에서 드러나는 가족의 폭력성과 사회의 억압은 답답함과 불편함을 줬다. 하지만 그런 불편함 속에서 인간 본능과 욕망, 그리고 타인과의 경계에 대해 생각해보게 되었다. 영혜의 선택이 이해되지 않을 때도 있었지만, 어쩌면 그녀가 그토록 추구했던 자유가 무엇인지 나도 궁금해졌다. 읽고 난 후에도 쉽게 정리되지 않는, 여운이 오래 남는 책이었다."
             android:textColor="@color/white"
@@ -321,7 +324,8 @@
             android:fontFamily="@font/pretendard_regular"
             android:lineHeight="22sp"
             android:layout_marginTop="50dp"
-            android:layout_marginStart="14dp" />
+            android:layout_marginHorizontal="14dp"
+            android:layout_marginBottom="20dp"/>
 
     </androidx.cardview.widget.CardView>
 
