--- a/app/src/main/res/layout/activity_review_space.xml
+++ b/app/src/main/res/layout/activity_review_space.xml
@@ -45,7 +45,7 @@
 
     <!-- 공간 이미지 -->
     <ImageView
-        android:id="@+id/book_image"
+        android:id="@+id/place_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -57,7 +57,7 @@
 
     <!-- 공간 제목 -->
     <TextView
-        android:id="@+id/book_title"
+        android:id="@+id/place_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
@@ -65,9 +65,9 @@
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/book_image"
-        app:layout_constraintStart_toStartOf="@+id/book_image"
-        app:layout_constraintTop_toBottomOf="@id/book_image" />
+        app:layout_constraintEnd_toEndOf="@+id/place_image"
+        app:layout_constraintStart_toStartOf="@+id/place_image"
+        app:layout_constraintTop_toBottomOf="@id/place_image" />
 
     <!-- 별점 표시 -->
     <androidx.appcompat.widget.AppCompatRatingBar
@@ -79,9 +79,9 @@
         android:rating="0.0"
         android:stepSize="0.5"
         android:theme="@style/Base.Widget.AppCompat.RatingBar"
-        app:layout_constraintEnd_toEndOf="@+id/book_title"
-        app:layout_constraintStart_toStartOf="@+id/book_title"
-        app:layout_constraintTop_toBottomOf="@id/book_title" />
+        app:layout_constraintEnd_toEndOf="@+id/place_title"
+        app:layout_constraintStart_toStartOf="@+id/place_title"
+        app:layout_constraintTop_toBottomOf="@id/place_title" />
 
     <!-- 별점 숫자 입력 (EditText) -->
     <EditText
