--- a/app/src/main/res/layout/item__review_book.xml
+++ b/app/src/main/res/layout/item__review_book.xml
@@ -65,10 +65,10 @@
             android:text="5.0"
             android:textColor="#FFFFFF"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/book_author"
-            android:layout_marginStart="170dp"
-            app:layout_constraintStart_toEndOf="@+id/book_author"
-            app:layout_constraintTop_toTopOf="@+id/book_author" />
+            app:layout_constraintBottom_toBottomOf="@+id/book_rating_bar"
+            app:layout_goneMarginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@+id/book_rating_bar"
+            app:layout_constraintTop_toTopOf="@+id/book_rating_bar" />
 
         <!-- 별점 표시 -->
         <androidx.appcompat.widget.AppCompatRatingBar
@@ -82,10 +82,10 @@
             android:rating="3.5"
             android:stepSize="0.5"
             android:theme="@style/Base.Widget.AppCompat.RatingBar"
-            app:layout_constraintBottom_toBottomOf="@+id/book_rating_text"
-            app:layout_constraintStart_toEndOf="@id/book_rating_text"
-            android:layout_marginStart="10dp"
-            app:layout_constraintTop_toTopOf="@+id/book_rating_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            android:layout_marginBottom="10dp"
+
             app:layout_constraintEnd_toEndOf="@+id/item_book"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
